Fix height of `github_recent`, `notes` containers to reduce layout shifts while loading.

--- a/src/apps/main/scss/v2/components/feed/_feed.scss
+++ b/src/apps/main/scss/v2/components/feed/_feed.scss
@@ -190,6 +190,13 @@ $feed-card-height: 9rem;
     max-height: 100%;
 }
 
+#github_recent,
+#notes {
+    &:empty {
+        height: $feed-scrollable-height;
+    }
+}
+
 .feed-item-dropdown {
     display: flex;
     flex-direction: column;
@@ -197,6 +204,7 @@ $feed-card-height: 9rem;
 
     &.dropdown[data-expanded="true"] {
         padding: 0;
+        height: $feed-scrollable-height;
     }
 
     > .dropdown-header {
